An intermediary commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,10 +75,16 @@ message(STATUS "Determining Source Files.")
 
 AddHeaderFile("SampleHeader.h")
 AddHeaderFile("XmlAttribute.h")
+AddHeaderFile("XmlAttributeInternalImplementation.h")
 AddHeaderFile("XmlBackEnd.h")
+AddHeaderFile("XmlBackEndInternalImplementation.h")
+AddHeaderFile("XmlInternalImplementation.h")
 AddHeaderFile("XmlNode.h")
+AddHeaderFile("XmlNodeInternalImplementation.h")
 AddHeaderFile("XmlRootNode.h")
+AddHeaderFile("XmlRootNodeInternalImplementation.h")
 AddHeaderFile("XmlSerialization.h")
+#AddHeaderFile("XmlSerializationScheme.h")
 ShowList("Header Files:" "\t" "${SerializationBackendXMLFiles}")
 
 AddSourceFile("SampleSource.cpp")
